--- a/Ken_Network/main.css
+++ b/Ken_Network/main.css
@@ -1,99 +1,120 @@
-/*
-h1 - header topic
-h2 - header subtopic
-h3 - topic
-h4 - subtopic
-p - information
-section - meant body content
- */
 html, body {
     height: 100%;
     width: 100%;
     text-align: center;
     align-content: center;
-    background: #2c5684;
-    color: #2c5684;
+    background: #54748C;
 }
-header{
+
+header {
     align-content: center;
     text-align: center;
-    background-color: #85acd6;
+    background-color: #333;
 }
+
 /* Text */
-h1{
-    font-size: 120%;
+h1 {
     color: #ff7a00;
     font-family: 'Baloo Paaji 2', cursive;
 }
+
 h2 {
-    color: #2c5684;
+    color: #20A4F3;
+    font-family: 'Bebas Neue', cursive;
 }
-h3{
-    color:#FF7A00;
+
+h3 {
+    color: #FF7A00;
+    font-family: 'Bebas Neue', cursive;
 }
-h4{
-    color: #2c5684;
+
+h4 {
+    color: #20A4F3;
+    font-family: 'Bebas Neue', cursive;
 }
-p, li{
+
+p, li {
     color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
 }
-li{
+
+li {
     list-style-type: none;
 }
+
 /* Divs */
-.section{
-    width:100%;
+.section {
+    width: 100%;
 }
-.sectionBody{
+
+.sectionBody {
     text-align: justify;
     background-color: #db8f49;
-    border-radius:20px;
+    border-radius: 20px;
     padding: 20px;
 }
 
-
-th{
-    font-size: 200%;
+th {
     text-align: right;
-    
-}
-td{
-   font-size: 150%; 
-   text-align: left;
-    
+    background-color: #ff7a00;
 }
 
-form{
+td {
+    font-size: 150%;
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+}
+
+tr:nth-child(even) {
+    background-color: #db8f49;
+}
+
+tr:nth-child(odd) {
+    background-color: #FFB570;
+}
+
+tr:hover {
+    background-color: #54748C;
+}
+
+form {
     display: inline-block;
 }
 
+button {
+    width: 100%;
+}
 
 /* topnav ----------------------------------------------------------*/
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
-  overflow: hidden;
+    background-color: #333;
+    overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ff7a00;
+    color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #db8f49;
-  color: white;
+    background-color: #20A4F3;
+    color: white;
 }
+
 /* topnav end ----------------------------------------------------------*/
