--- a/Ken_Network/main.css
+++ b/Ken_Network/main.css
@@ -1,3 +1,4 @@
+/* Main file info */
 html, body {
     height: 100%;
     width: 100%;
@@ -15,19 +16,19 @@ header {
 /* Text */
 h1 {
     color: #ff7a00;
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'Baloo Paaji 2', cursive;
 }
 
 h2 {
-    font-size: 35px;
+    font-size: 25px;
     color: #20A4F3;
     font-family: 'Bebas Neue', cursive;
 }
 
 h3 {
     color: #FF7A00;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Bebas Neue', cursive;
 }
 
